# Prea_Mid_SDK

./: .gitignore  CMakeLists.txt  MappingGeometry.iss  README.md  README_BoundaryLayer.md  README_MeshProcessor_Usage.md  README_PACKAGING.md  README_Socket_API.md  README_StandardizedNamingModel.md  SOCKET_README.md  create_portable_exe.bat  create_portable_exe.ps1  create_portable_exe_360zip.bat  create_portable_exe_simple.bat  create_portable_exe_winrar.bat  example_model.json
demo/: CMakeLists.txt  Untitled  commonEnumeration.h  convertPolyhedronDemo.cpp  demo.cpp  documentDemo.cpp  documentDemo.h  edgeMeshParametersDemo.cpp  faceMeshParametersDemo.cpp  fileMonitor.h  geometryDemo.cpp  geometryDemo.h  importDemo.cpp  importDemo.h  meshDemo.cpp  meshDemo.h  meshQualityDemo.cpp  periodicFaceDemo.cpp  postProcessDemo.cpp  postProcessDemo.h  renderDemo.cpp  renderDemo.h  smoothVolumeMeshDemo.cpp  surfaceMeshEditDemo.cpp  surfaceMeshEditDemo.h  thincutDemo.cpp
demo/postProcessDemoImpl/: postProcessAccumulatedCurveDemo.cpp  postProcessContourDemo.cpp  postProcessDPMTrajectoryDemo.cpp  postProcessExportDataDemo.cpp  postProcessExportDataDemo.h  postProcessFanOperatingPointDemo.cpp  postProcessFieldVariableDemo.cpp  postProcessFieldVariableDemo.h  postProcessISOClipDemo.cpp  postProcessIntegralDemo.cpp  postProcessPointInterpolationDemo.cpp  postProcessPointInterpolationDemo.h  postProcessTransformDemo.cpp  postProcessTransformDemo.h  postProcessVorticityDemo.cpp
include/: DataInteractionServer.h  GeometryDataStructures.h  GeometryProcessor.h  Logger.h  MeshProcessor.h  MeshVisualizationServer.h  ModelProcessingServer.h  ModelProcessor.h  ProjectModelData.h  RenderProcessor.h  RenderThreadBridge.h  SocketCommandAPI.h  ThirdPartySDKWrapper.h  VolumeProcessor.h  VolumeVisualizationAPI.h  VolumeVisualizationServer.h
socket_test_client/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  SearchableComboBox.cpp  SearchableComboBox.h  SocketClient.cpp  SocketClient.h  main.cpp
src/: CMakeLists.txt  DataInteractionServer.cpp  GeometryAPI.cpp  GeometryAPI.h  GeometryAPIExample.cpp  GeometryDataStructures.cpp  GeometryProcessor.cpp  Logger.cpp  MeshProcessor.cpp  MeshVisualizationServer.cpp  ModelProcessingServer.cpp  ModelProcessor.cpp  ModelProcessorExample.cpp  ProjectModelData.cpp  RenderProcessor.cpp  RenderThreadBridge.cpp  SocketCommandAPI.cpp  VolumeProcessor.cpp  VolumeVisualizationServer.cpp  commonMethods.cpp  commonMethods.h  main.cpp
